adds ability to require POST for hand starts
- add new endpoint POST game/id/hand that can be configured as a
  requirement for starting next hand
- add ability to determine the deck order from the new endpoint
